tests/pass/AndAssign.java
package pass;

public class AndAssign {
  public boolean andassign(boolean x, boolean y) {
    return x; // x &= y; return x;
  }
}
