tests/fail/AndAssign.java
package fail;

import java.lang.System;

public class AndAssign {

  public static void main(String[] args ) {
    boolean cool = true;
    cool &= "hi";
  }

}
